--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,19 @@
-
 body {
-  font-family: "Montserrat";
-  text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat-Bold";
+  font-weight: 700;
 }
 
 p {
   color: #8f8f8f;
 }
 
-/* Headings */
 
-.big-heading {
-  font-family: "Montserrat-Black";
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
-
-.section-heading {
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-/* Containers */
-
-.container-fluid{
-  padding: 7% 15%;
+.container-fluid {
+  padding: 3% 15% 7%;
+  background-color: #ff4c68;
 }
 
 /* Sections */
@@ -49,7 +34,7 @@ p {
 }
 
 .navbar-brand {
-  font-family: "Ubuntu";
+  font-family: 'Ubuntu', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -60,10 +45,10 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+  font-weight: 100;
 }
 
-/* Buttons */
+/* Download Buttons */
 
 .download-button {
   margin: 5% 3% 5% 0;
@@ -71,100 +56,117 @@ p {
 
 /* Title Section */
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-  text-align: left;
+.title-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
-
-#title .container-fluid {
-  padding: 3% 15% 7%;
-}
-
-/* Title Image */
 
 .title-image {
   width: 60%;
   transform: rotate(25deg);
   position: absolute;
-  right: 30%;
+  right: 30%
 }
 
-/* Features Section */
+/* Features */
 
 #features {
+  text-align: center;
+  padding: 10%;
   position: relative;
+  z-index: 1;
 }
 
-.feature-title {
-  font-size: 1.5rem;
-}
-
-.feature-box {
-  padding: 4.5%;
-}
-
-.icon {
-  color: #ef8172;
+.features-icon {
   margin-bottom: 1rem;
+  color: #ef8172;
 }
 
-.icon:hover {
+.features-icon:hover {
   color: #ff4c68;
 }
 
-/* Testimonial Section */
+/* Testimonials */
 
 #testimonials {
   background-color: #ef8172;
+  text-align: center;
 }
 
 .testimonial-text {
-  font-size: 3rem;
-  line-height: 1.5;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 2rem 8rem 2rem 8rem;
 }
 
 .testimonial-image {
   width: 10%;
   border-radius: 100%;
-  margin: 20px;
 }
 
+.carousel-item {
+  padding: 7% 5%;
+}
 
-#press {
+/* Press */
+
+.press {
   background-color: #ef8172;
-  padding-bottom: 3%;
+  text-align: center;
+  padding: 20px 0 50px 0;
 }
 
-.press-logo {
-  width: 15%;
-  margin: 20px 20px 50px;
+.press-image {
+  width: 10rem;
+  padding-bottom: 50px;
+  margin: 0 20px;
+  display: inline-block;
 }
 
 /* Pricing Section */
 
 #pricing {
   padding: 100px;
-}
-
-.price-text {
-  font-size: 3rem;
-  line-height: 1.5;
+  text-align: center;
 }
 
 .pricing-column {
   padding: 3% 2%;
 }
 
-/* CTA Section */
+/* Call To Action */
 
-
-/* Footer Section */
-
-
-.social-icon {
-  margin: 20px 10px;
+#cta {
+  text-align: center;
+  padding: 4.5%;
 }
+
+.cta-header {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+/* Footer */
+
+#footer {
+  text-align: center;
+  padding: 7% 5%;
+}
+
+.footer-icons {
+  padding-bottom: 10px;
+}
+
+.footer-icons > a {
+  padding: 0 10px;
+  color: #000;
+}
+
+.copyright {
+  font-size: 0.75rem;
+}
+
+/* Media Queries */
 
 @media (max-width: 1028px) {
 
@@ -175,5 +177,21 @@ p {
   .title-image {
     position: static;
     transform: rotate(0);
+  }
+}
+
+@media (max-width: 640px) {
+
+  .title-heading {
+    font-size: 2.75rem;
+  }
+
+  .testimonial-text {
+    font-size: 2rem;
+    margin: 2rem;
+  }
+
+  .price-header {
+    font-size: 1.5rem;
   }
 }
